<resources>
    <string name="app_name">money</string>

    <string name="language">语言/Language/Idioma</string>

    <string name="following_system_language">使用系统语言</string>
    <string name="Chinese">中文</string>
    <string name="Spanish">Español</string>
    <string name="English">English</string>
    <string name="Portuguese">Português</string>


    <string name="splash_hint">Young people\'s credit wallet</string>

    <string name="skip">SKIP</string>
    <string name="get_started">GET STARTED</string>

    <string name="best_loan">BAST LOAN</string>
    <string name="offers_just_for_you">OFFERS JUST FOR YOU</string>
    <string name="guide_page_des_1">Loan amount up to $20,000 MXN Pesos Lower daily interest rates starting at 0.09%</string>

    <string name="quick">QUICK</string>
    <string name="approval_process">APPROVAL PROCESS</string>
    <string name="guide_page_des_2">Instant approval less than 30 minutes Direct money transfer to your bank account</string>

    <string name="easy">EASY</string>
    <string name="way_to_borrow">WAY TO BORROW</string>
    <string name="guide_page_des_3">Minmum documentation and 100% online process with no paperwork no branch visits</string>

    <string name="simple">SIMPLE</string>
    <string name="eligibility_criteria">ELIGIBILITY CRITERIA</string>
    <string name="guide_page_des_4">Age above 18 and not over 55 years Have a debit account that is in YOUR name</string>

    <string name="ine_ife_verfication">INE/IFE VERFICATION</string>

    <string name="ine_ife_hint">All uploded images will only be used for KYC process</string>

    <string name="ine_ife_front_hint">Scan the front of your INE card</string>
    <string name="ine_ife_rear_hint">Scan the back of your INE card</string>

    <string name="next">NEXT</string>

    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="curp_hint">CURP(Ingresa tu CURP)</string>
    <string name="rfc_hint">RFC(Registro Federal de Contribuyentes)</string>

    <string name="please_input_nombre">Por favor introduce un nombre</string>
    <string name="please_input_apellido_paterno">Por favor introduce Apellido paterno</string>
    <string name="please_input_apellido_materno">Por favor introduce Apellido materno</string>
    <string name="please_input_curp">Por favor introduce CURP</string>
    <string name="please_input_rfc">Por favor introduce RFC</string>

    <string name="identification_of_failure">Identification of failure</string>
    <string name="please_information">Por favor, perfeccione la información.</string>


    <string name="take_selfie">TAKE SELFIE</string>
    <string name="take_selfie_failed">TAKE SELFIE FAILED</string>
    <string name="take_selfie_failed_i">Take Selfie Failed</string>
    <string name="liveness_failed_hint">All uploded images will only be used for KYC process</string>




    <string name="liveness_blink">Please blink</string>
    <string name="liveness_mouse">Please open your mouth and then close</string>
    <string name="liveness_pos_raw">Please turn head left or right (&lt;30 degrees)</string><!--yaw摇头-->
    <string name="liveness_hold_phone_vertical">Please hold the phone upright </string>
    <string name="liveness_weak_light">Find a brighter place</string>
    <string name="liveness_too_light">Find a darker place</string>
    <string name="liveness_no_camera_permission">Camera is not turned on, please turn on camera permissions</string>
    <string name="liveness_perform">Yes</string>
    <string name="liveness_cancel">Cancel</string>
    <string name="liveness_try_again">Use again</string>
    <string name="liveness_detection_success">Liveness detection succeed</string>
    <string name="liveness_move_face_center">Please move your face to the center of the face frame</string>
    <string name="liveness_still">Please stay still and start testing</string>
    <string name="liveness_frontal">Please look straight at the screen</string>
    <string name="liveness_detection_fail">Liveness detection failed, please try again</string>
    <string name="liveness_time_out">Time out</string>
    <string name="liveness_no_people_face">Please put your face into the frame</string>
    <string name="liveness_auth_check">Please Wait</string>
    <string name="liveness_tip_move_closer">Please move your face closer to the screen</string>
    <string name="liveness_tip_move_furthre">Please move your face further away from the screen</string>
    <string name="liveness_device_not_support">The device does not support liveness detection</string>

</resources>
