<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activitylayout"
    android:fitsSystemWindows="true"
    >
    <include
        android:id="@+id/head"
        layout="@layout/base_head" />
    <TextView
        android:id="@+id/kyc_hint_top"
        android:layout_below="@+id/head"
        android:layout_marginTop="@dimen/dimen_13dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ine_ife_hint"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <RelativeLayout
        android:layout_below="@+id/kyc_hint_top"
        android:id="@+id/kyc_front_ly"
        android:layout_marginTop="21dp"
        android:layout_width="278dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/kyc_front_img"
            android:layout_width="match_parent"
            android:layout_height="177dp"

            app:failureImage="@drawable/kfc_front_ic"
            app:actualImageScaleType="centerCrop"
            app:placeholderImage="@drawable/kfc_front_ic"
            app:placeholderImageScaleType="centerCrop"
            app:roundedCornerRadius="@dimen/dimen_7dp"
            app:failureImageScaleType="centerCrop"/>
        
            <TextView
                android:id="@+id/kyc_front_hint"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ine_ife_front_hint"
                android:textSize="12sp"
                android:textColor="@color/white"
                />
        <ImageView
            android:id="@+id/kyc_front_camera"
            android:layout_width="@dimen/dimen_27dp"
            android:layout_height="22dp"
            android:layout_centerInParent="true"
            android:src="@drawable/camera_ic"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/kyc_front_ly"
        android:id="@+id/kyc_rear_ly"
        android:layout_marginTop="21dp"
        android:layout_width="278dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/kyc_rear_img"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            app:failureImage="@drawable/kfc_rear_ic"
            app:actualImageScaleType="centerCrop"
            app:placeholderImage="@drawable/kfc_rear_ic"
            app:placeholderImageScaleType="centerCrop"
            app:roundedCornerRadius="@dimen/dimen_7dp"
            app:failureImageScaleType="centerCrop"/>
        <TextView
            android:id="@+id/kyc_rear_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ine_ife_rear_hint"
            android:textSize="12sp"
            android:textColor="@color/white"
            />
        <ImageView
            android:id="@+id/kyc_rear_camera"
            android:layout_width="@dimen/dimen_27dp"
            android:layout_height="22dp"
            android:layout_centerInParent="true"
            android:src="@drawable/camera_ic"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/kyc_next_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/next"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/share_guide_end_bg"
        android:textColor="@color/white"
        android:shadowColor="#ff0091ff"
        android:shadowDx="0"
        android:shadowDy="2"
        />
</RelativeLayout>
