<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activitylayout"
    android:fitsSystemWindows="true"
    >
    <include
        android:id="@+id/head"
        layout="@layout/base_head" />
    <ScrollView
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/kyc_hint_top"
                android:layout_marginTop="@dimen/dimen_13dp"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ine_ife_hint"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <RelativeLayout
                android:layout_below="@+id/kyc_hint_top"
                android:id="@+id/kyc_front_ly"
                android:layout_marginTop="21dp"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                
                android:layout_height="wrap_content">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/kyc_front_img"
                    android:layout_width="282dp"
                    android:layout_height="181dp"
                    android:background="@drawable/share_kfc_fount_ok_bg"
                    android:padding="@dimen/dimen_2dp"
                    app:failureImage="@drawable/kfc_front_ic"
                    app:actualImageScaleType="centerCrop"
                    app:placeholderImage="@drawable/kfc_front_ic"
                    app:placeholderImageScaleType="centerCrop"
                    app:roundedCornerRadius="@dimen/dimen_7dp"
                    app:failureImageScaleType="centerCrop"/>
                <ImageView
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/kyc_front_img"
                    android:layout_marginLeft="-25dp"
                    android:src="@drawable/kfc_front_ok_ic"
                    />

            </RelativeLayout>
            <LinearLayout
                android:id="@+id/kfc_message_lt"
                android:layout_below="@+id/kyc_front_ly"
                android:layout_marginTop="42dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen_15dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textColor="@color/color_999"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/kfc_next_nombre"
                        android:layout_marginTop="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_333"
                        android:background="@null"/>
                    <View
                        android:layout_marginTop="@dimen/dimen_11dp"
                        style="@style/HorizontalDivideLine"
                        android:layout_alignParentBottom="true" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="11dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apellido_paterno"
                        android:textColor="@color/color_999"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/kfc_next_apellido_paterno"
                        android:layout_marginTop="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_333"
                        android:background="@null"
                        />
                    <View
                        android:layout_marginTop="@dimen/dimen_11dp"
                        style="@style/HorizontalDivideLine"
                        android:layout_alignParentBottom="true" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="11dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apellido_materno"
                        android:textColor="@color/color_999"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/kfc_next_apellido_materno"
                        android:layout_marginTop="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_333"
                        android:background="@null"/>
                    <View
                        android:layout_marginTop="@dimen/dimen_11dp"
                        style="@style/HorizontalDivideLine"
                        android:layout_alignParentBottom="true" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="11dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/curp_hint"
                        android:textColor="@color/color_999"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/kfc_next_curp"
                        android:layout_marginTop="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_333"
                        android:background="@null"/>
                    <View
                        android:layout_marginTop="@dimen/dimen_11dp"
                        style="@style/HorizontalDivideLine"
                        android:layout_alignParentBottom="true" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="11dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rfc_hint"
                        android:textColor="@color/color_999"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/kfc_next_rfc"
                        android:layout_marginTop="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_333"
                        android:background="@null"/>
                    <View
                        android:layout_marginTop="@dimen/dimen_11dp"
                        style="@style/HorizontalDivideLine"
                        android:layout_alignParentBottom="true" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_below="@+id/kfc_message_lt"
                android:layout_alignParentBottom="true"
                android:id="@+id/kyc_next_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/next"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginBottom="45dp"
                android:background="@drawable/share_guide_end_bg"
                android:textColor="@color/white"
                android:shadowColor="#ff0091ff"
                android:shadowDx="0"
                android:shadowDy="2"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
